<resources>
    <string name="app_name">Android Udemy Course</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="empty_string" />

    <string name="home">Home</string>

    <!-- Sort Number String -->
    <string name="sort_number">Sort Number</string>
    <string name="sort_button_text">Sortear</string>
    <string name="result_text">O número sorteado foi: %1$s</string>
    <string name="title_text">Clique no botão para sortear um número de 0 a 10</string>

    <!-- Daily Quotes String -->
    <string name="daily_quotes">Daily Quotes</string>
    <string name="new_quotes_button_text">Nova Frase</string>
    <string name="quotes_text" />

    <!--    Jokempo String -->
    <string name="jokempo">Jokempô</string>
    <string name="choice_app_text">Escolha do App</string>
    <string name="instruction_text">Escolha sua opção:</string>
    <string name="user_lose_text">Você Perdeu !!</string>
    <string name="user_wins_text">Você Ganhou !!</string>
    <string name="draw_text">Empate !!</string>

    <!--    Alcohol or Gasoline String -->
    <string name="alcohol_or_gasoline">Alcool ou Gasolina</string>
    <string name="info_text">Saiba a melhor opção de abastecimento do seu carro!</string>
    <string name="alcohol_hit">Preço álcool ex: 1.90</string>
    <string name="gasoline_hit">Preço gasolina ex: 3.90</string>
    <string name="result_text_alcohol_or_gasoline">Resultado</string>
    <string name="compute_hit">Calcular</string>
    <string name="gasoline_better_text">Melhor abastecer com Gasolina</string>
    <string name="alcohol_better_text">Melhor abastecer com Álcool</string>
    <string name="empty_fields_text">Preencha os preços primeiro !</string>

    <!--    Heads or Tails -->
    <string name="heads_or_tails">Cara ou Coroa</string>
    <string name="text_button_play">JOGAR</string>

    <!--    ATM Consultancy String -->
    <string name="atm_title">ATM Consultoria</string>
    <string name="atm_email">atendimento@atmconsultoria.com.br</string>
    <string name="main">Principal</string>
    <string name="atm_about">Sobre</string>
    <string name="atm_service">Serviços</string>
    <string name="atm_customer">Clientes</string>
    <string name="atm_contact">Contato</string>
    <string name="first_service_title">Sistema de gestão de qualidade</string>
    <string name="second_service_title">Indicador de desempenho</string>
    <string name="service_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="customer_text">Em mais de 15 anos de existência a ATM acumula experiência em serviços de consultoria para empresas nacionais e multinacionais de diversos portes, tendo atendido mais de 1000 empresas desde sua abertura.</string>
    <string name="submenu_title">Entre em contato</string>
    <string name="share">Compartilhar</string>
    <string name="atm_description">A ATM Consultoria tem como missão apoiar organizações que desejam alcaçar o sucesso atráves da excelência em gestão e da busca pela qualidade</string>
    <string name="exit">Sair</string>
    <string name="group_contact">Envie um email</string>
    <string name="group_social">Redes socias</string>
    <string name="title_activity_main_lear_eglish">MainLearEglishActivity</string>

    <!--    Learn English -->
    <string name="learn_english">Aprenda Inglês</string>
    <string name="fragment_animals">Animals</string>
    <string name="fragment_nubers">Numbers</string>
    <string name="fragment_vowels">Vowels</string>
    <string name="vowels_video_title">The Short Vowel Song</string>
    <string name="vowels_video_description">Best Phonics é uma série fonética de cinco níveis para alunos iniciantes de inglês. A matéria fácil e sistemático desta série ajudará os alunos a desenvolver habilidades fonéticas essenciais de uma forma divertida e a entrar no mundo da leitura com confiança.</string>


    <!--    Media Player -->
    <string name="media_player">Media Player</string>
    <string name="music">Music</string>
    <string name="video">Video</string>
    <string name="title_video">Rick and Morty</string>
    <string name="subtitle_video">2018 1 Temporada</string>
    <string name="storyline_video">Rick Sanchez é um cientista genial e alcoólatra que foi morar com a família de sua filha (Beth), uma cirurgiã cardíaca de equinos. Ele divide seu tempo entre desenvolver projetos altamente tecnológicos em seu laboratório (garagem da casa de Beth) e levar seu neto de 14 anos Morty em aventuras perigosas e surreais pelo Multiverso. Combinados com tensões preexistentes dentro da família, esses eventos causam ao sensível Morty muito angústia em casa e na escola.</string>

    <!--    My Annotions -->
    <string name="my_annotations">Minhas Anotações</string>
    <string name="empty_field_error_message">Preencha a anotação</string>
    <string name="annotations_saved_message">Modificações salvas</string>
    <string name="annotations_not_found_message">Nota não encontrada</string>

    <!--   Task List -->
    <string name="task_list">Lista de Tarefas</string>
</resources>