<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_main"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_learn_english"
            android:icon="@drawable/ic_language"
            android:title="@string/learn_english" />
        <item
            android:id="@+id/nav_atm_consultancy"
            android:icon="@drawable/ic_business"
            android:title="@string/atm_title" />
        <item
            android:id="@+id/nav_heads_or_tails"
            android:icon="@drawable/ic_coin_head_tail"
            android:title="@string/heads_or_tails" />
        <item
            android:id="@+id/nav_alcohol_or_gasoline"
            android:icon="@drawable/ic_fuel"
            android:title="@string/alcohol_or_gasoline" />
        <item
            android:id="@+id/nav_jokempo"
            android:icon="@drawable/ic_jokempo"
            android:title="@string/jokempo" />
        <item
            android:id="@+id/nav_daily_quotes"
            android:icon="@drawable/ic_quotes"
            android:title="@string/daily_quotes" />
        <item
            android:id="@+id/nav_sort_number"
            android:icon="@drawable/ic_sort_number"
            android:title="@string/sort_number" />
    </group>
</menu>