<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_atm_main">

    <fragment
        android:id="@+id/nav_atm_main"
        android:name="com.matheus.androidudemycourse.feature.atm_consultancy.fragments.AtmMainFragment"
        android:label="@string/atm_title"
        tools:layout="@layout/fragment_atm_main" />
    <fragment
        android:id="@+id/nav_services_atm"
        android:name="com.matheus.androidudemycourse.feature.atm_consultancy.fragments.ServicesFragment"
        android:label="@string/atm_service"
        tools:layout="@layout/fragment_services" />
    <fragment
        android:id="@+id/nav_clients_atm"
        android:name="com.matheus.androidudemycourse.feature.atm_consultancy.fragments.CustomerFragment"
        android:label="@string/atm_customer"
        tools:layout="@layout/fragment_customer" />
    <fragment
        android:id="@+id/nav_contact_atm"
        android:name="com.matheus.androidudemycourse.feature.atm_consultancy.fragments.ContactAtmFragment"
        android:label="@string/atm_contact"
        tools:layout="@layout/fragment_contact_atm" />
    <fragment
        android:id="@+id/nav_about_atm"
        android:name="com.matheus.androidudemycourse.feature.atm_consultancy.fragments.AboutAtmFragment"
        android:label="@string/atm_about"
        tools:layout="@layout/fragment_about_atm" />
</navigation>