<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.matheus.androidudemycourse.feature.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_sort_number"
        android:name="com.matheus.androidudemycourse.feature.sort_number.SortNumberFragment"
        android:label="@string/sort_number"
        tools:layout="@layout/fragment_sort_number" />
    <fragment
        android:id="@+id/nav_daily_quotes"
        android:name="com.matheus.androidudemycourse.feature.daily_quotes.DailyQuotesFragment"
        android:label="@string/daily_quotes"
        tools:layout="@layout/fragment_daily_quotes" />
    <fragment
        android:id="@+id/nav_jokempo"
        android:name="com.matheus.androidudemycourse.feature.jokempo.JokempoFragment"
        android:label="@string/jokempo"
        tools:layout="@layout/fragment_jokempo" />

</navigation>