<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".feature.media_player.fragments.VideoPlayerFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/backgroundVideoImageView"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:src="@drawable/background_video"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/playVideoImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="55dp"
        android:src="@drawable/play_video"
        app:layout_constraintBottom_toBottomOf="@id/backgroundVideoImageView"
        app:layout_constraintEnd_toEndOf="@id/backgroundVideoImageView"
        app:layout_constraintStart_toStartOf="@id/backgroundVideoImageView"
        app:layout_constraintTop_toTopOf="@id/backgroundVideoImageView" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/titleVideoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/title_video"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backgroundVideoImageView" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/subititleVideoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/subtitle_video"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleVideoTextView" />

    <androidx.appcompat.widget.AppCompatRatingBar
        android:id="@+id/ratingVideoRatingBar"
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:numStars="5"
        android:rating="4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subititleVideoTextView" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/storyline_video"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ratingVideoRatingBar" />


</androidx.constraintlayout.widget.ConstraintLayout>

